package seedu.address.logic.parser;

import static java.util.Objects.requireNonNull;
import static seedu.address.logic.Messages.MESSAGE_INVALID_COMMAND_FORMAT;

import java.util.Collections;
import java.util.HashMap;
import java.util.Locale;
import java.util.Map;
import java.util.logging.Logger;

import seedu.address.commons.core.LogsCenter;
import seedu.address.logic.commands.Command;
import seedu.address.logic.parser.exceptions.ParseException;

/**
 * Shared parser that dispatches to a concrete subcommand parser based on the first token.
 *
 * @param <T> command base type for the subcommand family
 */
public class SubcommandDispatcherParser<T extends Command> implements Parser<T> {
    private static final Logger logger = LogsCenter.getLogger(SubcommandDispatcherParser.class);

    private final Map<String, Parser<? extends T>> subcommandParsers;
    private final String usageMessage;

    /**
     * Creates a dispatcher with the provided subcommand parser mapping and usage message.
     */
    public SubcommandDispatcherParser(Map<String, Parser<? extends T>> subcommandParsers, String usageMessage) {
        requireNonNull(subcommandParsers);
        requireNonNull(usageMessage);
        Map<String, Parser<? extends T>> normalizedParsers = new HashMap<>();
        for (Map.Entry<String, Parser<? extends T>> entry : subcommandParsers.entrySet()) {
            normalizedParsers.put(entry.getKey().toLowerCase(Locale.ROOT), entry.getValue());
        }
        this.subcommandParsers = Collections.unmodifiableMap(normalizedParsers);
        this.usageMessage = usageMessage;
    }

    @Override
    public T parse(String args) throws ParseException {
        requireNonNull(args);

        String trimmedArgs = args.trim();
        if (trimmedArgs.isEmpty()) {
            logger.warning("Missing subcommand. Expected format: " + usageMessage);
            throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, usageMessage));
        }

        String[] parts = trimmedArgs.split("\\s+", 2);
        String subcommand = parts[0].toLowerCase(Locale.ROOT);
        String subcommandBody = parts.length > 1 ? parts[1] : "";

        Parser<? extends T> subcommandParser = subcommandParsers.get(subcommand);
        if (subcommandParser == null) {
            logger.warning("Unknown subcommand '" + subcommand + "'. Known subcommands: " + subcommandParsers.keySet());
            throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, usageMessage));
        }

        return subcommandParser.parse(subcommandBody);
    }
}
